Changing CSS styling

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -14,8 +14,9 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-   color: Black;
+  color: Black;
   background-color: coral;
+  font-family: 'Arial'
 }
 </style>
 
@@ -29,7 +30,7 @@
 	<div class="center">
 		</head>
 		<body>
-			<h1 style="font-family: 'Arial'">Sing Me A Bedtime Story: A Spotify App</h1>
+			<h1 style="text-align:center">Sing Me A Bedtime Story: A Spotify App</h1>
 			<h3 style="text-align:center"><p><b>By William Furtado</b></p>
 			<form method="POST" style="text-align:center">
 				<label for="text">Enter any sentence:</label>
