Adding external link to success page

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -24,8 +24,8 @@
 	<title>Spotify App</title>
 		<div class="collapse" id="navbarToggleExternalContent">
 		  <div class="bg-dark p-4">
-		    <h5 class="text-white h4">A Spotify Web API Application</h5>
-		    <span class="text-muted">I'd consider this a fair, albeit limited, representation of my passions.</span>
+		    <h5 class="text-white h4">A Spotify Web Application</h5>
+		    <span class="text-muted">I'd consider this a fair, albeit limited, representation of my passions. Carefully crafted by William Furtado.</span>
 		  </div>
 		</div>
 		<nav class="navbar navbar-dark bg-dark">
@@ -43,9 +43,10 @@
 	<div class="center">
 		</head>
 		<body>
-			<h1 class="display-4" style="text-align:center"><i>Sing Me A Story</i></h1>
+			<h1 class="display-3" style="text-align:center"><i>Sing Me A Story</i></h1>
+			<br>
 			<form method="POST">
-	    		<input name="text" class="form-control" type="text" placeholder="Enter any sentence" aria-label="input">
+	    		<input name="text" class="form-control" type="text" placeholder="Enter any sentence" aria-label="input" autocomplete="off">
 			</form>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 		</body>
