--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,11 +2,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
 <style>
-.container {
-  height: 200px;
-  position: relative;
-  border: 3px solid green;
-}
 
 .center {
   margin: 0;
@@ -30,9 +25,11 @@
 		</div>
 		<nav class="navbar navbar-dark bg-dark">
 		  <div class="container-fluid">
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+		  	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
+		    <a class="d-flex" href="#" style="color:White; text-decoration:none"><i>Sing Me A Story</i></a>
+		    <a class="d-flex" href="https://github.com/willfurtado/spotify-app" style="color:White">Code</a>
 		  </div>
 		</nav>
 	<style>
